# bayz

./: .dockerignore  .env.example  .gitignore  Dockerfile  agents.py  auth.py  evals.py  learning_loop.py  main.py  models.py  nixpacks.toml  pyproject.toml  railway.toml  scenarios.py  simulator.py
templates/: index.html  login.html
